--- a/FinalProject/packages.config
+++ b/FinalProject/packages.config
@@ -1,15 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="5.1.1" targetFramework="net472" />
-  <package id="EPPlus" version="7.2.2" targetFramework="net472" />
+  <package id="EPPlus" version="7.3.2" targetFramework="net472" />
   <package id="EPPlus.Interfaces" version="6.1.1" targetFramework="net472" />
   <package id="EPPlus.System.Drawing" version="6.1.1" targetFramework="net472" />
-  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.0" targetFramework="net472" />
-  <package id="Moq" version="4.20.70" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net472" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="3.0.1" targetFramework="net472" />
+  <package id="Moq" version="4.20.72" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
+  <package id="System.Formats.Asn1" version="8.0.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net472" />
+  <package id="System.Text.Json" version="8.0.4" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
 </packages>
